css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #4891ff;
  --light-color: #f4f4f6;
  --dark-color: #111;
}

body {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  background: #fff;
}

a {
  text-decoration: none;
  color: #333;
}

ul {
  list-style: none;
}

img {
  max-width: 100%;
}

/* Navbar */
.navbar {
  background: #fff;
  padding: 20px 0;
  border-bottom: 2px solid var(--light-color);
  position: sticky;
  top: 0;
  z-index: 1000;
}

.navbar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar .main-menu ul {
  display: flex;
}

.navbar ul li a {
  padding: 10px 20px;
  display: block;
  font-weight: 600;
  transition: 0.5s;
}

.navbar ul li a:hover {
  color: var(--primary-color);
}

.navbar ul li a i {
  margin-right: 10px;
}

.navbar ul li:last-child a {
  margin-left: 10px;
}

/* Hero */
.hero {
  margin-bottom: 50px;
}

.hero .container .hero-row-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
}

.hero .container .hero-profile {
  background: url("../media/profile-pic.png") no-repeat;
  background-size: contain;
  background-position: left top;
  flex-grow: 1;
  min-height: 200px;
  margin-top: 40px;
  margin-bottom: 20px;
  margin-right: 20px;
  margin-left: 10px;
}
.hero .hero-content {
  display: flex;
  flex-direction: column;
  width: 60%;
}

.hero .hero-text {
  width: 70%;
  margin-bottom: 30px;
}

.hero .hero-buttons {
  display: flex;
  font-size: 0.9rem;
}

.hero .hero-buttons a i {
  margin-right: 10px;
}

.hero .hero-buttons a:last-child {
  margin-left: 20px;
}

.hero .hero-skill-logo-container {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  justify-items: center;
  align-items: end;
  column-gap: 15px;
  row-gap: 25px;
  margin-top: 50px;
}
.hero .hero-skill-logo-container .skill-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-width: 100px;
}
.hero .hero-skill-logo-container .skill-logo img {
  height: 50px;
  width: auto;
  max-width: 100%;
  object-fit: contain;
}
.hero .hero-skill-logo-container p {
  margin-top: 10px;
}

main .container {
  display: grid;
  grid-template-columns: 1fr 230px;
  gap: 20px;
  padding-bottom: 80px;
}

main .work-header {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
}

main .work-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #4a4a4a;
}

main .work-header .btn {
  margin-top: 50px;
  margin-bottom: 20px;
  padding: 5px 20px;
  color: #4a4a4a;
  cursor: default;
}

main aside {
  grid-row: 1 / 3;
  grid-column: 2 / 3;
}

main aside .project-nav {
  position: sticky;
  top: 7.3rem;
  width: 100%;
  background: #fff;
  border-radius: 16px;
  margin-top: 45px;
  box-shadow: 4px 3px 5px rgb(201, 201, 201);
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: justify;
  text-align-last: right;
}

main aside .project-nav h4 {
  padding-bottom: 7px;
  margin-bottom: 10px;
  border-bottom: 1px solid #333;
}

main aside .project-nav ul li a,
main aside .project-nav h4 a {
  padding: 5px 0px;
  display: block;
  transition: 0.5s;
}

main aside .project-nav ul li a:hover,
main aside .project-nav h4 a:hover {
  color: var(--primary-color);
}

/* Project */
article .project-header {
  margin-left: 13px;
}
main .project-description {
  width: 85%;
  margin-bottom: 30px;
}

.project-step-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}
.project-step {
  position: relative;
}
.project-step-wide {
  grid-column: 1 / 3;
}
.number-circle {
  height: 25px;
  width: 25px;
  font-size: 0.8rem;
  /* padding-top: 2px; */
  background: var(--primary-color);
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 30%;
  font-weight: 600;
  position: absolute;
  z-index: 200;
  top: 0;
  left: 50;
}
.project-step-content {
  background: #fff;
  color: #111;
  /* border-bottom-right-radius: 16px;
  border-bottom-left-radius: 16px; */
  border-radius: 16px;
  box-shadow: 4px 3px 5px rgb(201, 201, 201);
  margin: 12px;
  display: flex;
  flex-direction: column;
}
.project-step-header {
  border-bottom: 2px solid #d6d6d6;
  height: 30px;
  display: flex;
  justify-content: flex-end;
}
.project-step-header .step-icon {
  margin: 6px;
  width: auto;
  margin-right: 13px;
  object-fit: contain;
  max-width: 100%;
}

.project-step-content p {
  padding: 25px;
  padding-top: 10px;
}

.project-step-content a {
  color: var(--primary-color);
  transition: 0.5s;
}
.project-step-content a:hover {
  text-decoration: underline;
  opacity: 0.8;
}
.project-step-content .step-image-container {
  display: flex;
  justify-content: center;
  align-items: center;
}
.project-step-content .step-image-container img {
  width: 180px;
  margin-bottom: 30px;
}

/* Video */
.video-content {
  padding: 10px 0 20px;
}

footer {
  margin: 0 auto;
  background: #333;
}
footer .container {
  padding-top: 30px;
  padding-bottom: 20px;
  padding-left: 25px;
  padding-right: 25px;
}
footer .footer-line {
  width: 100%;
  height: 1px;
  background: #ffffff;
  margin-bottom: 15px;
}
footer .text-sm {
  font-weight: 400;
  font-size: 1rem;
}
footer .container p {
  color: #fff;
}
footer a {
  color: #fff;
}

/* Utility Classes */

.container {
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 15px;
}

/* Buttons */
.btn {
  display: inline-block;
  padding: 13px 20px;
  background: var(--light-color);
  box-shadow: 4px 3px 5px rgb(201, 201, 201);
  color: #333;
  font-weight: 600;
  text-decoration: none;
  border: none;
  border-radius: 16px;
  cursor: pointer;
  transition: 0.5s;
}

.btn:hover {
  opacity: 0.8;
}

.btn-primary {
  background: var(--primary-color);
  color: #fff;
}

.btn-light {
  background: #fff;
  color: var(--dark-color);
}

.btn-dark {
  background: var(--dark-color);
  color: #fff;
}

/* Text Classes */

h4 {
  font-weight: 600;
}

.text-xxl {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 600;
  margin: 40px 0 20px;
}

.text-xl {
  font-size: 2.2rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 40px 0 20px;
}

.text-lg {
  font-size: 1.8rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 30px 0 20px;
}

.text-md {
  font-size: 1.2rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 20px 0 10px;
}

.text-sm {
  font-size: 0.9rem;
  line-height: 1.4;
  font-weight: normal;
}

.text-center {
  text-align: center;
}

.anchor {
  display: block;
  position: relative;
  top: -120px;
  visibility: hidden;
}
.anchor-projects {
  display: block;
  position: relative;
  top: -85px;
  visibility: hidden;
}

/* Background */
.bg-dark {
  background-color: var(--dark-color);
  color: #fff;
}
.bg-grey {
  background-color: var(--light-color);
  color: var(--dark-color);
}
.bg-light {
  background-color: var(--light-color);
  color: var(--dark-color);
}

hr.solid {
  border: 0.5px solid #e6e6e6;
  margin: 40px 0px;
}
.highlight {
  text-decoration: underline;
}

/* Hamburger Button */
.hamburger-button {
  display: none;
  background: none;
  border: none;
  cursor: pointer;
  padding: 10px;
  z-index: 1000;
}

.hamburger-button .hamburger-line {
  width: 30px;
  height: 3px;
  background: #333;
  margin: 6px 0;
}

/* Mobile Menu */
.mobile-menu {
  position: fixed;
  top: 0;
  right: -300px;
  width: 250px;
  height: 100%;
  z-index: 100;
  background: #fff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  transition: right 0.3s ease-in-out;
}

.mobile-menu.active {
  right: 0px;
}

.mobile-menu ul {
  margin-top: 100px;
  padding-right: 10px;
}

.mobile-menu ul li {
  margin: 10px, 0;
}

.mobile-menu ul li:last-child a {
  margin-top: 10px;
}

.mobile-menu ul li a {
  font-size: 20px;
  transition: 0.3s;
}

/* Media Queries */
@media (max-width: 960px) {
  .text-xxl {
    font-size: 2.5rem;
  }

  main .container {
    grid-template-columns: 1fr;
    column-gap: 0px;
  }

  .project-nav {
    display: none;
  }

  .hero .hero-skill-logo-container {
    grid-template-columns: repeat(4, 1fr);
    row-gap: 40px;
    margin-top: 55px;
  }
  .hero .hero-skill-logo-container .skill-logo img {
    height: 55px;
  }
  footer .container {
    padding-right: 25px;
  }
}

@media (max-width: 730px) {
  .text-xxl {
    font-size: 2rem;
  }

  .navbar {
    padding: 5px 0;
  }

  .navbar .logo {
    padding-top: 7px;
  }

  .navbar .main-menu {
    display: none;
  }

  .navbar .hamburger-button {
    display: block;
  }

  .hero .container .hero-row-wrapper {
    flex-direction: column-reverse;
    align-items: center;
  }

  .hero .container .hero-row-wrapper .hero-profile {
    min-height: 200px;
    width: 100%;
    margin-bottom: 0px;
    margin-top: 10px;
    background-position: center top;
  }

  .hero .container .hero-row-wrapper .hero-content {
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .hero .container .hero-row-wrapper .hero-content .hero-heading {
    margin-top: 25px;
  }
  .hero .container .hero-row-wrapper .hero-content .hero-text {
    width: 90%;
    margin-bottom: 20px;
  }
  .hero .hero-skill-logo-container .skill-logo img {
    height: 50px;
  }

  .projects h2 {
    text-align: center;
  }

  .projects .project-description {
    width: 100%;
    padding: 0 20px;
  }
  .project-step {
    grid-column: 1 / 3;
  }
}

@media (max-width: 500px) {
  .text-xxl {
    font-size: 1.8rem;
  }

  .hero .hero-content .hero-heading {
    margin: 15px 0;
  }

  .hero .hero-buttons {
    flex-direction: column;
  }

  .hero .hero-buttons a:last-child {
    margin-top: 20px;
    margin-left: 0px;
  }
  .hero .hero-skill-logo-container .skill-logo img {
    height: 40px;
  }
}

